# psr-sandbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: release.yml
app/: __init__.py  main.py
app/static/: index.html
tests/: test_main.py
