[tool.poetry]
name = "psr-sandbox"
version = "0.1.0"
description = "Small FastAPI + frontend sandbox to test python-semantic-release with Poetry and pip"
authors = ["Sandbox <sandbox@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx = "^0.27"
python-semantic-release = "^9.8"


[tool.semantic_release]
# Keep the version in sync in the Poetry table.
version_toml = ["pyproject.toml:tool.poetry.version"]
# Also bump the fallback constant used when package metadata is unavailable.
version_variables = ["app/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore\\(release\\):.*"]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "docs", "style", "refactor", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# python-semantic-release configuration (v9+)
# Docs: https://python-semantic-release.readthedocs.io/
# ---------------------------------------------------------------------------
